--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,74 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+ @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;1,100&family=Lato:ital,wght@0,300;0,700;1,300&family=Shalimar&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+ * {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+   font-family: 'Merriweather', serif;
+ }
+ .navbar{
+  background-color: black;
+  color: white;
+ }
+ .navbar-brand{
+  font-size: 1.4 rem !important;
+  color: #565387 !important;
+ }
+ .menu_active{
+  font-weight: bold;
+  border-bottom: 1px solid  #565387;
+ }
+ .navbar a{
+  font-size: 1rem;
+  text-transform: capitalize;
+ }
+ .navbar a:hover{
+  color: #3498db;
+ }
+
+ /* main landing section */
+ #header{
+  width: 100%;
+  height: 80vh;
+  margin-top: 70px;
+ }
+ #header h1{
+  margin: 0 0 10px 0;
+   font-size: 38px;
+   font-weight: 700;
+   color: black;
+ }
+ #header h2{
+  color: #484848;
+  font-size: 20px;
+ }
+ #header .brand-name{
+  color: #3498db;
+ }
+ #header .btn-get-started{
+  font-weight: 500;
+  font-size: 18px;
+  letter-spacing: 1px ;
+  display: inline-block;
+  padding: 10px 30px;
+  border-radius: 50px;
+  transition: 0.5s;
+  color: #3498db;
+  border: 2px solid #3498db;
+  text-decoration: none;
+ }
+ #header .btn-get-started:hover{
+ background: #3498db;
+ color: #fff;
+ }
+ #header .animated{
+  animation: up-down 2s ease-in-out infinite alternate-reverse both;
+ }
+ @keyframes up-down {
+  0%{
+    transform: translateY(10px);
+  }
+  100%{
+    transform: translateY(-10px);
+  }
+ }
